# CQuIK

./: .gitignore  LICENSE  README.md  cquik.h  meson.build
bindings/python/: cquik.i
examples/: kuka_kr6_ik.c
tests/: cquik_tests.c  include_twice.c
